# RAG-Based-document-helper

./: .gitignore  README.md  download_docs.py  ingestion-basic-1.py  ingestion_custom_chunking_2.py  ingestion_pinecone_5.py  ingestion_pipeline.py  ingestion_pipeline_cached.py  main.py  pyproject.toml  react_agent.py
backend/: chat_service.py  rag_service.py
llamaindex-docs/: python_cloud.md  python_cloud_general_pricing.md  python_cloud_general_webhooks.md  python_cloud_llamaclassify_examples.md  python_cloud_llamaclassify_examples_classify_contract_types.md  python_cloud_llamaclassify_getting_started.md  python_cloud_llamaclassify_getting_started_python.md  python_cloud_llamacloud_examples.md  python_cloud_llamacloud_examples_building-rag-with-agents.md  python_cloud_llamacloud_getting_started.md  python_cloud_llamacloud_guides_api_sdk.md  python_cloud_llamacloud_guides_framework_integration.md  python_cloud_llamacloud_guides_guides.md  python_cloud_llamacloud_guides_guides_index_status_monitoring.md  python_cloud_llamacloud_guides_index_status_monitoring.md  python_cloud_llamacloud_guides_ui.md  python_cloud_llamacloud_how_to_files_extract_figures.md  python_cloud_llamacloud_integrations_data_sinks.md  python_cloud_llamacloud_integrations_data_sinks_astradb.md  python_cloud_llamacloud_integrations_data_sinks_azureaisearch.md  python_cloud_llamacloud_integrations_data_sinks_managed.md  python_cloud_llamacloud_integrations_data_sinks_milvus.md  python_cloud_llamacloud_integrations_data_sinks_mongodb.md  python_cloud_llamacloud_integrations_data_sinks_pinecone.md  (+894 more)
(+7 files in other folders)
